# BehindYou

./: .gitignore  CLAUDE.md  README.md  main.py  notify.py  pyproject.toml  requirements.txt
behindyou/: __init__.py  __main__.py  calibration.py  config.py  detection.py  engine.py  face.py  notification.py  paths.py  runner.py  tracking.py  worker.py
behindyou/gui/: app.py  calibration_dialog.py  event_log.py  main_window.py  settings_panel.py  styles.py  tray.py  video_widget.py
tests/: conftest.py  test_config.py  test_detection.py  test_engine.py  test_face.py  test_gui.py  test_tracking.py
