[project]
name = "behindyou"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "lap>=0.5.13",
    "supervision>=0.25.0",
]

[project.scripts]
behindyou = "behindyou:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
