[project]
name = "behindyou"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.1.0,<9.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "lap>=0.5.13",
    "supervision>=0.25.0,<1.0.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.12", "ruff>=0.4.0"]

[project.scripts]
behindyou = "behindyou:gui_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"
